--- a/.shippable.yml
+++ b/.shippable.yml
@@ -9,6 +9,7 @@ env:
       - TARGET=nios2
       - TARGET=arm
       - TARGET=riscv64
+      - TARGET=powerpc64le
       - TARGET=arc
       - TARGET=x86_64-zephyr-elf
       - TARGET=xtensa_sample_controller
